# file-lock-finder

./: CMakeLists.txt  FileLockFinder.manifest  README.md
Core/: AppSettings.h  FileLockAnalyzer.cpp  FileLockAnalyzer.h  LockResult.h  LockStatus.h  LockingProcessInfo.h  PathNormalizer.cpp  PathNormalizer.h  SettingsService.cpp  SettingsService.h
WindowsApi/: AdvancedHandleScanner.cpp  AdvancedHandleScanner.h  ContextMenuIntegrationService.cpp  ContextMenuIntegrationService.h  MoveFileExApi.cpp  MoveFileExApi.h  NativeFileApi.cpp  NativeFileApi.h  ProcessApi.cpp  ProcessApi.h  RestartManager.cpp  RestartManager.h  Win32Handle.h
src/: AboutDialog.cpp  AboutDialog.h  Dialogs.cpp  Dialogs.h  MainWindow.cpp  MainWindow.h  PreferencesDialog.cpp  PreferencesDialog.h  QuickScanDialog.cpp  QuickScanDialog.h  Resource.h  ResultsFormatting.cpp  ResultsFormatting.h  ResultsListView.cpp  ResultsListView.h  UiHelpers.cpp  UiHelpers.h  main.cpp
